--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "ng build --prod"
   },
   "repository": {
     "type": "git",
@@ -59,8 +60,11 @@
   },
   "homepage": "https://demos.creative-tim.com/black-dashboard-angular/#/dashboard",
   "private": false,
+  "engines": { "node": "10.16.3", "npm": "6.9.0" },
   "dependencies": {
     "@angular/animations": "^8.0.2",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "^8.0.2",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "8.0.2",
     "@angular/compiler": "8.0.2",
@@ -83,12 +87,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.800.3",
-    "@angular/cli": "8.0.3",
-    "@angular/compiler-cli": "8.0.2",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "^8.0.2",
     "@angular/language-service": "8.0.2",
-    "@types/node": "12.0.8",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
+    "@types/node": "12.0.8",
     "codelyzer": "5.1.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
