--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
 
   "dependencies": {
     "@angular/animations": "^8.0.2",
-  
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "^8.0.2",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "8.0.2",
     "@angular/compiler": "8.0.2",
