--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
   },
   "homepage": "https://demos.creative-tim.com/black-dashboard-angular/#/dashboard",
   "private": false,
-
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.9.0"
+  },
   "dependencies": {
     "@angular/animations": "^8.0.2",
     "@angular/cli": "^8.3.20",
