--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "test": "echo \"Error: no test specified\" && exit 1"
-  
   },
   "repository": {
     "type": "git",
@@ -66,11 +65,11 @@
   },
   "dependencies": {
     "@angular/animations": "^8.0.2",
-    "@angular/cli": "^8.3.20",
-    "@angular/compiler-cli": "^8.0.2",
     "@angular/cdk": "^8.2.3",
+    "@angular/cli": "^8.3.20",
     "@angular/common": "8.0.2",
     "@angular/compiler": "8.0.2",
+    "@angular/compiler-cli": "^8.0.2",
     "@angular/core": "8.0.2",
     "@angular/forms": "8.0.2",
     "@angular/platform-browser": "8.0.2",
@@ -79,12 +78,15 @@
     "@ng-bootstrap/ng-bootstrap": "4.2.1",
     "chart.js": "2.8.0",
     "core-js": "3.1.4",
+    "express": "^4.17.1",
     "file-saver": "^2.0.2",
     "ngx-toastr": "10.0.4",
+    "path": "^0.12.7",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.1",
     "rxjs": "6.5.2",
     "tslib": "1.10.0",
+    "typescript": "3.4.5",
     "xlsx": "^0.15.3",
     "zone.js": "0.9.1"
   },
