--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "test": "echo \"Error: no test specified\" && exit 1"
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "ng build --prod"
   },
   "repository": {
     "type": "git",
